--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/config": "^3.3.4",
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.12.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
